[gd_scene load_steps=4 format=3 uid="uid://dik4crm43xxnq"]

[ext_resource type="Texture2D" uid="uid://t7fdipv2d8ni" path="res://icon.svg" id="1_a5jwt"]
[ext_resource type="Script" path="res://Script/Level scenes/pause_scene.gd" id="1_yk533"]
[ext_resource type="AudioStream" uid="uid://dk0hlyvwggtil" path="res://Sounds/Selected/Close.wav" id="3_xq65k"]

[node name="Pause scene" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yk533")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.364706)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -160.0
offset_right = -91.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.25231, 2.40142)
texture = ExtResource("1_a5jwt")

[node name="Continue" type="Button" parent="."]
layout_mode = 0
offset_left = 523.0
offset_top = 329.0
offset_right = 602.0
offset_bottom = 360.0
text = "Continue"

[node name="Replay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 43.0
offset_right = 16.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
text = "Replay"

[node name="Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 535.0
offset_top = 406.0
offset_right = 588.0
offset_bottom = 437.0
text = "Menu"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 505.0
offset_top = 273.0
offset_right = 567.0
offset_bottom = 296.0
scale = Vector2(1.97412, 2.00625)
text = "PAUSED"

[node name="Close" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("3_xq65k")
volume_db = 24.0

[connection signal="button_down" from="Continue" to="." method="_on_continue_button_down"]
[connection signal="button_down" from="Replay" to="." method="_on_replay_button_down"]
[connection signal="button_down" from="Menu" to="." method="_on_menu_button_down"]
